--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Aron Berenyi portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,38 +43,91 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item project-item">
-								<figure class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></figure>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								<ul class="icons project-links">
-									<li><a target="_blank" href="https://github.com/numeroflip" class="btn"><span class="label">Live Demo</span></a></li>
-									<li><a target="_blank" href="https://www.linkedin.com/in/aron-berenyi/" class="icon brands fa-github text-primary"><span class="label">Github</span></a></li>
+								<figure class="image fit thumb">
+									<img src="images/thumbs/01.jpg" alt="" />
+									<div class="icons-section">
+										<a target="_blank" href="https://sleepy-citadel-44307.herokuapp.com/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/myReads-app/" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>MyReads</h3>
+								<ul class="tags">
+									<li>HTML</li>
+									<li>CSS</li>
+									<li>React</li>
+									<li>Styled components</li>
 								</ul>
+								<p>A book organizer app. Search, add, delete, and organize books into three categories.</p>
+
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item project-item">
+								<figure class="image fit thumb">
+									<img src="images/thumbs/04.jpg" alt="" />
+									<div class="icons-section">
+										<a target="_blank" href="https://u-weather-journal.herokuapp.com/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/u-weather-journal" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>Weather Journal</h3>
+								<ul class="tags">
+									<li>Nodejs</li>
+									<li>Express</li>
+									<li>PostgreSQL</li>
+									<li>Materialize CSS</li>
+									<li>AccuWeather API</li>
+								</ul>
+								<p>Type in your name, zip code and the text you want to add. If you submit, a new entry will be added with your location and the current weather according to AccuWeather. Try it out. The server runs on Express, and the data is stored in Postgres.</p>
+
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item project-item">
+								<figure class="image fit thumb">
+									<img src="images/thumbs/02.jpg" alt="" />
+									<div class="icons-section">
+										<a target="_blank" href="https://numeroflip.github.io/blog_of_trees/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/blog_of_trees" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>Blog of Trees</h3>
+								<ul class="tags">
+									<li>HTML</li>
+									<li>SCSS</li>
+								</ul>
+								<p>A static blog site, with a homepage layout, and a blog post layout which is visible if you click on the first post on the homepage (the one with the red "new" label).</p>
+
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item project-item">
+								<figure class="image fit thumb">
+									<img src="images/thumbs/03.jpg" alt="" />
+									<div class="icons-section">
+										<a target="_blank" href="https://numeroflip.github.io/random_trees/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/random_trees" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>Random Trees</h3>
+								<ul class="tags">
+									<li>HTML</li>
+									<li>SCSS</li>
+									<li>JavaScript</li>
+								</ul>
+								<p>The site displays 4 random trees with descriptions, you can add more. The currently viewed section is highlighted. There is a light and dark theme too. A vanilla HTML, CSS and JS project</p>
+
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="col-6 col-12-xsmall work-item project-item">
+								<figure class="image fit thumb">
+									<img src="images/thumbs/05.jpg" alt="" />
+									<div class="icons-section">
+										<a target="_blank" href="https://numeroflip.github.io/forkify/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/forkify" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>Forkify</h3>
+								<ul class="tags">
+									<li>HTML</li>
+									<li>SCSS</li>
+									<li>JavaScript</li>
+								</ul>
+								<p>A recipe search engine. It lets you make a shopping list based on servings. It let's you like a recipe and navigate to the site with a full description. A code along.</p>
+
 							</article>
 						</div>
 						<ul class="actions">
