updating 'reciper' links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</h1>
 					<p class="subheading"> 
 						At least I try to create solutions.<br/>
-						Okay,  but at least once I've seen an indian guy creating solutions in the TV...
+						Okay,  but at least once I've seen a guy creating solutions on Youtube...
 					</p>
 				</div>
 			</header>
@@ -125,11 +125,11 @@
 								<figure class="image fit thumb">
 									<img src="images/thumbs/05.jpg" alt="" />
 									<div class="icons-section">
-										<a target="_blank" href="https://numeroflip.github.io/forkify/" class="project-link">Live Demo</a>
-										<a target="_blank" href="https://github.com/numeroflip/forkify" class="icon project-link brands fa-github "></a>
+										<a target="_blank" href="https://numeroflip.github.io/reciper/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/reciper" class="icon project-link brands fa-github "></a>
 									</div>
 								</figure>
-								<h3>Forkify</h3>
+								<h3>Reciper</h3>
 								<ul class="tags">
 									<li>HTML</li>
 									<li>SCSS</li>
