--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 							<strong>- Let me guess... In... In an IT class, maybe?</strong><br>
 							<em>- Yeah... Isn't it fantastic?</em> <br>
 							<strong>- What else... It was in your secondary school, wasn't it?</strong> <br>
-							<em>- You bet it was.</em><br>
-							<strong>- Was it just after your teacher showed you how to make a website with only HTML?</strong> <br>
-							<em>- I'm getting concerned... Are you spying on me?</em> <br>
+							<em>- You bet it was...</em><br>
+	
 
 						<ul class="actions">
 							<li><a href="#about-me" class="button">Learn More</a></li>
@@ -85,7 +84,7 @@
 									<li>Materialize CSS</li>
 									<li>AccuWeather API</li>
 								</ul>
-								<p>Type in your name, zip code and the text you want to add. If you submit, a new entry will be added with your location and the current weather according to AccuWeather. Try it out. The server runs on Express, and the data is stored in Postgres.</p>
+								<p>Type in your name, zip code, and the text you want to add. If you submit, a new entry will be added with your location and the current weather according to AccuWeather. Try it out. The server runs on Express, and the data is stored in Postgres.</p>
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item project-item">
@@ -118,7 +117,7 @@
 									<li>SCSS</li>
 									<li>JavaScript</li>
 								</ul>
-								<p>The site displays 4 random trees with descriptions, you can add more. The currently viewed section is highlighted. There is a light and dark theme too. A vanilla HTML, CSS and JS project</p>
+								<p>The site displays four random trees with descriptions, you can add more. The currently viewed section is highlighted. There is a light and dark theme too. A vanilla HTML, CSS and JS project</p>
 
 							</article>
 							<article class="col-6 col-12-xsmall work-item project-item">
@@ -135,7 +134,7 @@
 									<li>SCSS</li>
 									<li>JavaScript</li>
 								</ul>
-								<p>A recipe search engine. It lets you make a shopping list based on servings. It let's you like a recipe and navigate to the site with a full description. A code along.</p>
+								<p>A recipe search engine. It lets you make a shopping list based on servings. It lets you like a recipe and navigates to the site with a full description.</p>
 
 							</article>
 						</div>
@@ -144,26 +143,25 @@
 
 					<section id="about-me">
 						<h2>About me</h2>
-						<p class="stuff"> I have to admit, I have a BsC degree in Wood Industry Engineering.</p>
+						<p class="stuff"> I have to admit, I have a BCs degree in Wood Industry Engineering.</p>
 						<h3 class="question"> So... What's the deal? How come you have that degree, aren't you that passionate about development after all?</h3>
-						<p class="stuff">	Ohh, not that fast, we're getting there.
-							In 2018 I realized that what I am learning in the uni is not necessarily the field I want to have a career in and I was a bit blue about that (Having an allergy to dust wasn't helping much either). So I started to brainstorm about what can be done. There are a lot of opportunities, but I remembered how much I liked that little website creation class in secondary school. I thought I give it a try, let's see if I like it or not. 
+						<p class="stuff">Ohh, not that fast, we're getting there. In 2018 I realized that what I am learning in the uni wasn't necessarily the field I want to have a career in and I was a bit blue about that (having an allergy to dust wasn't helping much either). So I started to brainstorm what can be done. There are a lot of opportunities, but I remembered how much I liked that little website creation class in secondary school. I thought I gave it a try, let's see if I like it or not.
 						</p>
 
 						<h3 class="question"> Why did I choose the wood industry to begin with?</h3>
-						<p class="stuff"> Want to know why? Because woodworking is freaking badass, that is why. It was a good enough reason for Elon Musk to produce that Cybertruck, so I am not ashamed about it either.  (Little did I knew back then that it wasn't specifically about woodworking, but that is another story ) And I had a lot other interests too. At one point I was a hobby actor, did music production, tinkered with electric circuits, built electrical guitars from scratch, and made wooden jewellery.</p>
+						<p class="stuff">Want to know why? Because woodworking is freaking badass, that is why. It was a good enough reason for Elon Musk to produce that Cybertruck, so I am not ashamed about it either. (Little did I knew back then that it wasn't specifically about woodworking, but that is another story) And I had a lot of other interests too. At one point I was a hobby actor, did music production, tinkered with electric circuits, built electrical guitars from scratch, and made wooden jewelry.</p>
 				
 						<p class="stuff">
-							I started with mapping out the areas I need to learn and there was plenty of them. As I am learning and moving forward a lot of things are clearer and clearer and it just amazes me how much more can be known, and done in this field. It is exciting as hell.   
+							I started with mapping out the areas I need to learn and there were plenty of them. As I am learning and moving forward a lot of things are clearer and clearer and it just amazes me how much more can be known and done in this field. It is exciting as hell.
+
 						</p>
 						<h3 class="question"> What am I learning exactly?</h3>
 						<p class="stuff">
-							Since 2018 I tried to deepen my knowledge in vanilla HTML CSS and JavaScript as much as I could with varying intensity. Now I feel confident enough to learn and make projects with React, databases, and back-end (Machine learning, Linux, networks are pretty damn interesting too) .
+							Since 2018 I have tried to deepen my knowledge in vanilla HTML CSS and JavaScript as much as I could with varying intensity. Now I feel confident enough to learn and make projects with React, databases, and back-end (Machine learning, Linux, networks are pretty damn interesting too).
 						</p>
 						<h3 class="question"> Personal</h3>
 						<p class="stuff">
-							I really like trees. Identifying trees I mean. 
-							About books, I'm an E.A. Poe fan. I mainly read nonfiction, business and self-improvement though, and really appreciate the works of Gary Vaynerchuk.
+							I really like trees. Identifying trees, I mean. About books, I'm an E.A. Poe fan. I mainly read nonfiction, business, and self-improvement though, and really appreciate the works of Gary Vaynerchuk.
 						</p>
 						<h3>Some unsought pictures</h3>
 						<div class="img-gallery">
