adding the Ancrypto project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,24 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+              <article class="col-6 col-12-xsmall work-item project-item">
+								<figure class="image fit thumb">
+									<img src="images/thumbs/ancrypto.png" alt="Ancrypto app screenshot" />
+									<div class="icons-section">
+										<a target="_blank" href="https://ancrypto.netlify.app/" class="project-link">Live Demo</a>
+										<a target="_blank" href="https://github.com/numeroflip/ancrypto" class="icon project-link brands fa-github "></a>
+									</div>
+								</figure>
+								<h3>Ancrypto</h3>
+								<ul class="tags">
+									<li>React</li>
+									<li>Context API</li>
+									<li>Cryptocompare API</li>
+									<li>Styled components</li>
+								</ul>
+								<p>A React app to follow and check cryptocurrency prices. Select your favourites, and see the yearly, monthly, weekly, or daily price changes from the dashboard.</p>
+
+							</article>
 							<article class="col-6 col-12-xsmall work-item project-item">
 								<figure class="image fit thumb">
 									<img src="images/thumbs/01.jpg" alt="" />
