Fixing a small grammar issue in text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <header class="major">
             <h2>Introduction</h2>
           </header>
-            <p>One day I started to wonder what is this "coding stuff" is all about? It was 2 years ago. It turned out that creating working and useful things from "thin air" is extremely engaging. Even with all the headaches of the eternal questions <em>"Why the hell doesn't my code work?!"</em> and <em>"Why the hell does my code work?!"</em> :) 
+            <p>One day I started to wonder what this "coding stuff" is all about? It was 2 years ago. It turned out that creating working and useful things from "thin air" is extremely engaging. Even with all the headaches of the eternal questions <em>"Why the hell doesn't my code work?!"</em> and <em>"Why the hell does my code work?!"</em> :) 
               <p> My main strengths are <span class="code">React.js</span>, vanilla <span class="code">Javascript</span> (ES6), <span class="code">CSS3/SASS</span>, and <span class="code">HTML</span>.
               <br>I also have additional experience in <span class="code">Node.js</span>, <span class="code">PostgreSQL</span>, and <span class="code">MaterializeCSS</span>.</p>
             <p>Currently, I'm trying to deepen my knowledge in Node.js and the Linux ecosystem, but I'm ready to learn any other technology as well.</p>
