fixing wrong email address links

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
 					<ul class="icons">
 						<li><a target="_blank" href="https://www.linkedin.com/in/aron-berenyi/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a target="_blank" href="https://github.com/numeroflip" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a target="_blank" href="mailto:aron.berenyi@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a target="_blank" href="mailto:aronberenyi@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
-					<a href="mailto:aron.berenyi@gmail.com" class="email">aron.berenyi@gmail.com</p>
+					<a href="mailto:aronberenyi@gmail.com" class="email">aronberenyi@gmail.com</p>
 
 				</div>
 			</footer>
